//
// NOTIFICATION
//

model Notification {
  id    String            @id @default(uuid())
  type  NotificationType
  level NotificationLevel @default(INFO)

  theme   String
  message String @db.Text

  isRead Boolean @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  actorId String
  actor   Actor  @relation("ActorNotifications", fields: [actorId], references: [id])

  publicationId String?
  publication   Publication? @relation(fields: [publicationId], references: [id])

  investigationId String?
  investigation   Investigation? @relation(fields: [investigationId], references: [id], onDelete: SetNull, onUpdate: Cascade)

  verifiedMedia VerifiedMedia[]
  verifiedLinks VerifiedLink[]

  correction Correction?

  @@index([investigationId])
  @@map("notifications")
}

//
// RECTIFICATION
//

model Correction {
  id String @id @default(uuid())

  notificationId String       @unique
  notification   Notification @relation(fields: [notificationId], references: [id], onDelete: Cascade)

  publicationId String
  publication   Publication @relation(fields: [publicationId], references: [id])

  title   String
  content String @db.Text

  correctedById String
  correctedBy   Actor  @relation("DirectorCorrections", fields: [correctedById], references: [id])

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}
