//
// PUBLICATION
//

model Publication {
  id String @id @default(uuid())

  investigationId String        @unique
  investigation   Investigation @relation(fields: [investigationId], references: [id], onDelete: Cascade)

  approvedById String
  approvedBy   Actor  @relation("DirectorApprovals", fields: [approvedById], references: [id])

  finalVerdict Verdict

  /// Editorial statement the director signs off when approving the dossier.
  /// Required by the domain for every publication created since the rule came
  /// in; NULL marks a dossier arbitrated before that, where no statement was
  /// ever recorded. Absence is represented, never faked with an empty string.
  publicationNotes String? @db.Text

  publishedAt  DateTime @default(now())
  isCorrection Boolean  @default(false)

  notifications Notification[]

  verifiedMedia VerifiedMedia[]
  verifiedLinks VerifiedLink[]

  createdAt  DateTime     @default(now())
  updatedAt  DateTime     @default(now()) @updatedAt
  correction Correction[]

  @@map("publications")
}

//
// VERIFIED MEDIA
//

model VerifiedMedia {
  id Int @id @default(autoincrement())

  url   String
  type  MediaType
  order Int

  authoritySourceId String?
  authoritySource   AuthoritySource? @relation(fields: [authoritySourceId], references: [id])

  publicationId String
  publication   Publication @relation(fields: [publicationId], references: [id], onDelete: Cascade)

  addedById String
  addedBy   Actor  @relation(fields: [addedById], references: [id])

  notifications Notification[]

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  @@index([authoritySourceId])
}

//
// VERIFIED LINKS
//

model VerifiedLink {
  id Int @id @default(autoincrement())

  url String

  authoritySourceId String?
  authoritySource   AuthoritySource? @relation(fields: [authoritySourceId], references: [id])

  publicationId String
  publication   Publication @relation(fields: [publicationId], references: [id], onDelete: Cascade)

  addedById String
  addedBy   Actor  @relation(fields: [addedById], references: [id])

  notifications Notification[]

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}
