@startuml mpd-simple
' =============================================================================
' Fake News Detector — Modèle Physique de Données (Merise), vue complète
' Source de vérité : migrations PostgreSQL réellement appliquées
' (app/server/src/infrastructure/config/prisma/migrations/**).
'
' Notation Merise :
'   <u>colonne</u>  clé primaire
'   # colonne       clé étrangère
'   (O)             colonne facultative (NULL autorisé)
'   (U)             contrainte d'unicité
' =============================================================================

hide circle
skinparam shadowless true
skinparam defaultFontName "Arial"
' Sans ceci, PlantUML lit le « # » Merise comme le marqueur de visibilité
' « protégé » et le remplace par une icône. À 0, le caractère est rendu tel quel.
skinparam classAttributeIconSize 0
skinparam entityBackgroundColor #FFFFFF
skinparam entityBorderColor #4A5568

title Fake News Detector — Modèle Physique de Données\nPostgreSQL, 22 tables

' =============================================================================
' 1. COMPTES ET IDENTITE
' =============================================================================

entity "actors" as actors {
  <u>id</u> : UUID
  --
  name : VARCHAR
  email : VARCHAR (U)
  role : Role
  status : AccountStatus
  citizenType : CitizenType
  engagementScore : INTEGER
  openReportsCount : INTEGER
  activeInvestigationsCount : INTEGER
  lastInboxRead : TIMESTAMP
  statusReason : StatusReason (O)
  statusReasonDetails : VARCHAR (O)
}

entity "watcher_applications" as wapp {
  <u>id</u> : UUID
  --
  # actorId : UUID
  motivation : TEXT
  status : WatcherApplicationStatus
}

' =============================================================================
' 2. AUTHENTIFICATION (tables générées par better-auth)
' =============================================================================

entity "user" as usr {
  <u>id</u> : TEXT
  --
  name : VARCHAR
  email : VARCHAR (U)
  emailVerified : BOOLEAN
  image : VARCHAR (O)
}

entity "session" as sess {
  <u>id</u> : TEXT
  --
  # userId : TEXT
  token : TEXT (U)
  expiresAt : TIMESTAMP
  ipAddress : VARCHAR (O)
  userAgent : VARCHAR (O)
}

entity "account" as acc {
  <u>id</u> : TEXT
  --
  # userId : TEXT
  accountId : TEXT
  providerId : TEXT
  password : TEXT (O)
  accessToken : TEXT (O)
  refreshToken : TEXT (O)
}

entity "verification" as verif {
  <u>id</u> : TEXT
  --
  identifier : TEXT
  value : TEXT
  expiresAt : TIMESTAMP
}

entity "auth_links" as alink {
  <u>id</u> : UUID
  --
  # userId : TEXT (U)
  # actorId : UUID (U)
  linkedAt : TIMESTAMP
}

' =============================================================================
' 3. CHAINE EDITORIALE
' =============================================================================

entity "reports" as reports {
  <u>id</u> : UUID
  --
  # citizenId : UUID
  theme : VARCHAR
  title : VARCHAR (O)
  content : TEXT (O)
  status : ReportStatus
}

entity "inbox_subjects" as inbox {
  <u>id</u> : UUID
  --
  # createdById : UUID
  # reportId : UUID (O) (U)
  theme : VARCHAR
  description : TEXT
  origin : InboxSubjectOrigin
  status : InboxSubjectStatus
}

entity "investigations" as inv {
  <u>id</u> : UUID
  --
  # inboxSubjectId : UUID (U)
  # journalistId : UUID
  mediaCategory : MediaCategory (O)
  draftVerdict : Verdict
  investigationNotes : TEXT
  attemptCount : INTEGER
  status : InvestigationStatus
}

entity "evidence" as evid {
  <u>id</u> : UUID
  --
  # investigationId : UUID
  # watcherId : UUID
  title : VARCHAR
  content : TEXT
}

entity "workflow_audits" as audit {
  <u>id</u> : UUID
  --
  # investigationId : UUID
  # actorId : UUID
  previousStatus : InvestigationStatus (O)
  newStatus : InvestigationStatus
  comment : TEXT (O)
}

entity "publications" as pub {
  <u>id</u> : UUID
  --
  # investigationId : UUID (U)
  # approvedById : UUID
  finalVerdict : Verdict
  publicationNotes : TEXT (O)
  publishedAt : TIMESTAMP
  isCorrection : BOOLEAN
}

entity "Correction" as corr {
  <u>id</u> : UUID
  --
  # notificationId : UUID (U)
  # publicationId : UUID
  # correctedById : UUID
  title : VARCHAR
  content : TEXT
}

' =============================================================================
' 4. MEDIAS ET SOURCES
' =============================================================================

entity "ReportMedia" as rmedia {
  <u>id</u> : SERIAL
  --
  # reportId : UUID
  # uploadedById : UUID
  url : VARCHAR
  type : MediaType
  order : INTEGER
}

entity "InboxSubjectMedia" as imedia {
  <u>id</u> : SERIAL
  --
  # inboxSubjectId : UUID
  # uploadedById : UUID
  url : VARCHAR
  type : MediaType
  order : INTEGER
  origin : InboxSubjectMediaOrigin
}

entity "InvestigationMedia" as invmedia {
  <u>id</u> : SERIAL
  --
  # investigationId : UUID
  # uploadedById : UUID
  # authoritySourceId : UUID (O)
  url : VARCHAR
  type : MediaType
  order : INTEGER
  origin : MediaOrigin
  category : MediaCategory (O)
  reliability : Verdict (O)
  justification : TEXT (O)
}

entity "EvidenceMedia" as emedia {
  <u>id</u> : SERIAL
  --
  # evidenceId : UUID
  # uploadedById : UUID
  url : VARCHAR
  type : MediaType
  order : INTEGER
  category : MediaCategory (O)
  reliability : Verdict (O)
  justification : TEXT (O)
}

entity "VerifiedMedia" as vmedia {
  <u>id</u> : SERIAL
  --
  # publicationId : UUID
  # addedById : UUID
  # authoritySourceId : UUID (O)
  url : VARCHAR
  type : MediaType
  order : INTEGER
}

entity "VerifiedLink" as vlink {
  <u>id</u> : SERIAL
  --
  # publicationId : UUID
  # addedById : UUID
  # authoritySourceId : UUID (O)
  url : VARCHAR
}

entity "AuthoritySource" as src {
  <u>id</u> : UUID
  --
  name : VARCHAR
  type : SourceType
}

' =============================================================================
' 5. DIFFUSION
' =============================================================================

entity "notifications" as notif {
  <u>id</u> : UUID
  --
  # actorId : UUID
  # publicationId : UUID (O)
  # investigationId : UUID (O)
  type : NotificationType
  level : NotificationLevel
  theme : VARCHAR
  message : TEXT
  isRead : BOOLEAN
}

' =============================================================================
' RELATIONS (pied-de-corbeau)
' =============================================================================

' Comptes
actors ||--o{ wapp
usr ||--o{ sess
usr ||--o{ acc
usr ||--|| alink
actors ||--|| alink

' Chaîne éditoriale
actors ||--o{ reports
actors ||--o{ inbox
reports ||--o| inbox
inbox ||--o| inv
actors ||--o{ inv
inv ||--o{ evid
actors ||--o{ evid
inv ||--o{ audit
actors ||--o{ audit
inv ||--o| pub
actors ||--o{ pub
pub ||--o{ corr
actors ||--o{ corr

' Médias
reports ||--o{ rmedia
inbox ||--o{ imedia
inv ||--o{ invmedia
evid ||--o{ emedia
pub ||--o{ vmedia
pub ||--o{ vlink
src ||--o{ invmedia
src ||--o{ vmedia
src ||--o{ vlink
actors ||--o{ rmedia
actors ||--o{ imedia
actors ||--o{ invmedia
actors ||--o{ emedia
actors ||--o{ vmedia
actors ||--o{ vlink

' Diffusion
actors ||--o{ notif
pub ||--o{ notif
inv ||--o{ notif
notif ||--o| corr

' =============================================================================
' NOTES
' =============================================================================

note as N0
  **Lecture** — <u>souligné</u> = clé primaire · # = clé étrangère
  (O) = facultative · (U) = unique
  Types en capitales sans guillemets = ENUM natifs PostgreSQL.
  Toutes les tables portent en plus `createdAt` et, sauf le journal
  d'audit qui est immuable, `updatedAt`.
  --
  **Héritage aplati** : Citoyen, Vigie, Journaliste et Directeur ne donnent pas
  quatre tables. Ils partagent `actors`, discriminée par la colonne `role`. Les
  colonnes propres à un rôle (`citizenType`, `openReportsCount`,
  `activeInvestigationsCount`) restent à NULL ou à zéro pour les autres.
  --
  **Pont identité / métier** : `auth_links` relie un compte d'authentification
  (`user`) à l'acteur métier (`actors`), en un-à-un strict des deux côtés. Les
  deux périmètres restent ainsi séparés : changer de fournisseur
  d'authentification n'atteint pas le modèle métier.
  --
  **Contrainte hors schéma** : un média d'origine JOURNALIST_PROOF exige
  `authoritySourceId` et interdit `category`, `reliability`, `justification` ;
  un média source impose l'inverse. Ces deux règles sont portées par le domaine,
  pas par une contrainte CHECK : le MPD ne peut pas les exprimer.
end note

@enduml
